Add bcmath to default docker image

--- a/lib/template/templates/layouts/default.twig
+++ b/lib/template/templates/layouts/default.twig
@@ -16,7 +16,7 @@
     {% block meta %}
     {% endblock %}
 
-    <link rel="icon" type="image/png" href="/asses/images/favicon.png" sizes="32x32"/>
+    <link rel="icon" type="image/png" href="/assets/images/favicon.png" sizes="32x32"/>
     <link rel="home" href="{{ siteUrl }}"/>
 </head>
 <body class="site-{{ currentSite.handle }}">
