--- a/lib/template/src/templates/_layouts/default.twig
+++ b/lib/template/src/templates/_layouts/default.twig
@@ -4,10 +4,8 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 
-    <title>My Company</title>
+    {% hook "seo" %}
 
-    <meta name="robots" content="index, follow"/>
-    <meta name="revisit-after" content="7 days"/>
     <meta name="referrer" content="origin-when-cross-origin"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"/>
 
